# routes/auth.js
@@ -8,9 +8,9 @@ router.use(session({ secret: process.env.SESSION_SECRET, resave: false, saveUnin
 router.use(passport.initialize());
 router.use(passport.session());
 
-router.get('/', (req, res) => {
-  res.send('<a href="/auth/google"> Authentication with Google</a>');
-});
+// router.get('/', (req, res) => {
+//   res.send('<a href="/auth/google"> Authentication with Google</a>');
+// });
 
 router.get('/auth/google', passport.authenticate('google', { scope: ['email', 'profile'] }));
 
