# swagger.json
@@ -14,7 +14,7 @@
     "GoogleOAuth": {
       "type": "oauth2",
       "flow": "implicit",
-      "authorizationUrl": "https://accounts.google.com/o/oauth2/auth",
+      "authorizationUrl": "https://cse341-final-project-workout-tracker.onrender.com/auth/google",
       "scopes": {
         "email": "Access user email address",
         "profile": "Access user profile information"
@@ -22,16 +22,6 @@
     }
   },
   "paths": {
-    "/": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
     "/auth/google": {
       "get": {
         "description": "",
